--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react-simple-wysiwyg": "^3.4.0",
         "react-slick": "^0.30.2",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^11.0.5",
         "react-transition-group": "^4.4.5",
         "slick-carousel": "^1.8.1",
         "style-it": "^2.1.4",
